barba js animation changed

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         class="fixed top-[2%] lg:w-[40%] bg-[#111111] border-2 border-white text-white rounded-lg lg:rounded-xl left-1/2 -translate-x-1/2 z-50">
         <div class="flex justify-around items-center">
             <span class="p-4 lg:p-5"><a href="index.html">Home</a></span>
-            <!-- <span class="p-4 lg:p-5"><a href="#">Testimonials</a></span> -->
-            <!-- <span class="p-4 lg:p-5"><a href="#">Projects</a></span> -->
+            <span class="p-4 lg:p-5"><a href="#">Testimonials</a></span>
+            <span class="p-4 lg:p-5"><a href="#">Projects</a></span>
             <span class="p-4 lg:p-5"><a href="skills.html">Skills</a></span>
             <!-- <span class="p-4 lg:p-5">text</span> -->
         </div>
@@ -283,12 +283,8 @@
             <!-- =============== cards section ===============  -->        
         </div>
     </main>
-
-
     <!-- ================= END CARDS SECTION ==================  -->
     <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.9.7/dist/barba.umd.min.js"></script>
-    <script src="script.js"></script>
-
+    <script src="js/script.js"></script>
 </body>
-
 </html>
