--- a/skills.html
+++ b/skills.html
@@ -84,8 +84,8 @@
     >
       <div class="flex justify-around items-center">
         <span class="p-4 lg:p-5"><a href="index.html">Home</a></span>
-        <!-- <span class="p-4 lg:p-5"><a href="#">Testimonials</a></span> -->
-        <!-- <span class="p-4 lg:p-5"><a href="#">Projects</a></span> -->
+        <span class="p-4 lg:p-5"><a href="#">Testimonials</a></span>
+        <span class="p-4 lg:p-5"><a href="#">Projects</a></span>
         <span class="p-4 lg:p-5"><a href="skills.html">Skills</a></span>
         <!-- <span class="p-4 lg:p-5">text</span> -->
       </div>
@@ -185,6 +185,8 @@
         </div>
       </div>
     </main>
+
+    <!-- <script src="script.js"></script> -->
 
     <script>
       // Module aliases
