--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <h1 class="hero-text hero-heading gilroy leading-[16vw] text-[16vw]">Creative</h1>
                 </div>
 
-                    <div class="absolute bottom-[0%] hidden lg:right-[2%] lg:top-[20%] lg:w-[30%] lg:block">
-                        <h3 class="text-4xl mazius text-primary">Creative Developer Vibe</h3>
-                        <p class="text-xl gilroy">
+                    <div class="absolute  bottom-[0%] hidden lg:right-[2%] lg:top-[20%] lg:w-[30%] lg:block">
+                        <h3 class="text-4xl mazius hero-sub text-primary">Creative Developer Vibe</h3>
+                        <p class="text-xl gilroy hero-para">
                             For me, development is more than writing code it's about creating
                             experiences. I love transforming ideas into interactive, responsive,
                             and visually engaging web solutions that solve real problems and
