--- a/skills.html
+++ b/skills.html
@@ -8,6 +8,13 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+     <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
+    <!-- Lenis Smooth Scroll -->
+    <script src="https://unpkg.com/lenis@1.1.9/dist/lenis.min.js"></script>
+
     <!-- Matter.js CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
@@ -18,13 +25,14 @@
       href="https://fonts.googleapis.com/css2?family=Allura&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css">
 
     <style>
-      :root {
+      /* :root {
         --color-black: #111;
         --color-white: #ffffff;
         --color-primary: #10b981;
-      }
+      } */
 
       body {
         overflow-x: hidden;
@@ -32,7 +40,7 @@
         padding: 0;
       }
 
-      @font-face {
+      /* @font-face {
         font-family: "mazius";
         src: url("mazius_display/MaziusDisplay/Mazius Display Extraitalic.otf")
           format("opentype");
@@ -41,7 +49,7 @@
       @font-face {
         font-family: "gilroy-bold";
         src: url("gilroy-bold/Gilroy-Bold.ttf") format("opentype");
-      }
+      } */
 
       @font-face {
         font-family: "gilroy";
@@ -68,58 +76,13 @@
         color: var(--color-primary) !important;
       }
 
-      #simulation-wrapper {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        position: relative;
-      }
-
-      #physics-canvas {
-        width: 100%;
-        height: 100%;
-        display: block;
-      }
-
-      #eyes {
-        --size: clamp(64px, 30vi, 256px);
-        block-size: var(--size);
-        inline-size: var(--size);
-      }
-
-      /* Loading Animation */
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-
-      .animate-spin {
-        animation: spin 1s linear infinite;
-      }
-
-      .fade-out {
-        animation: fadeOut 0.5s ease forwards;
-      }
-
-      @keyframes fadeOut {
-        0% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 0;
-          visibility: hidden;
-        }
-      }
+      
     </style>
   </head>
 
-  <body class="bg-black" data-page="skills">
+  <body class="">
     <!-- Navigation -->
-    <div
+    <!-- <div
       class="fixed top-[2%] lg:w-[40%] bg-[#111111] border-2 border-white text-white rounded-lg lg:rounded-xl left-1/2 -translate-x-1/2 z-50"
     >
       <div class="flex justify-around items-center">
@@ -132,8 +95,7 @@
           ><a href="skills.html" class="text-primary">Skills</a></span
         >
       </div>
-    </div>
-
+    </div> -->
     <!-- Main Content -->
     <main data-barba="wrapper">
       <div
@@ -141,14 +103,19 @@
         data-barba-namespace="skills"
         class="page-content"
       >
+
+      <!-- nav start  -->
+         <!-- navbar+  -->
+   
+        <!-- nav end  -->
         <!-- Equal grid layout -->
         <div class="grid grid-cols-1 lg:grid-cols-2 h-screen">
           <!-- LEFT SECTION - Text Content -->
           <div
-            class="p-4 md:p-6 lg:p-8 xl:p-10 flex flex-col justify-center h-screen items-center bg-black"
+            class="p-4 md:p-6 lg:p-8 xl:p-10 flex flex-col justify-center items-center bg-black"
           >
             <!-- Eyes SVG -->
-            <svg
+            <!-- <svg
               id="eyes"
               width="128"
               height="128"
@@ -190,7 +157,7 @@
                 <use href="#eye-shape" id="eye-right" />
                 <use href="#pupil-shape" id="pupil-right" />
               </g>
-            </svg>
+            </svg> -->
 
             <!-- Text Content -->
             <div class="max-w-xl mx-auto mt-8">
