Matter js changers

--- a/skills.html
+++ b/skills.html
@@ -80,7 +80,8 @@
     </style>
   </head>
 
-  <body class="">
+  <body class="" data-barba="wrapper">
+
     <!-- Navigation -->
     <!-- <div
       class="fixed top-[2%] lg:w-[40%] bg-[#111111] border-2 border-white text-white rounded-lg lg:rounded-xl left-1/2 -translate-x-1/2 z-50"
@@ -97,7 +98,7 @@
       </div>
     </div> -->
     <!-- Main Content -->
-    <main data-barba="wrapper">
+    <main >
       <div
         data-barba="container"
         data-barba-namespace="skills"
