--- a/testimonial.html
+++ b/testimonial.html
@@ -331,7 +331,7 @@
       }
     </style>
   </head>
-  <body class="flex items-center justify-center p-4 md:p-8">
+  <body class="flex items-center justify-center p-4 md:p-8" data-page="testimonial">
     <main data-barba="wrapper">
       <div
         data-barba="container"
