--- a/skills.html
+++ b/skills.html
@@ -110,109 +110,21 @@
    
         <!-- nav end  -->
         <!-- Equal grid layout -->
-        <div class="grid grid-cols-1 lg:grid-cols-2 h-screen">
+        <div class="grid grid-cols-1 lg:grid-cols-1 h-screen">
           <!-- LEFT SECTION - Text Content -->
-          <div
-            class="p-4 md:p-6 lg:p-8 xl:p-10 flex flex-col justify-center items-center bg-black"
-          >
-            <!-- Eyes SVG -->
-            <!-- <svg
-              id="eyes"
-              width="128"
-              height="128"
-              viewBox="0 0 128 128"
-              role="img"
-              aria-label="googly eyes emoji that track the mouse cursor"
-            >
-              <defs>
-                <linearGradient
-                  id="a"
-                  x1="0"
-                  x2="0"
-                  y1="46.676"
-                  y2="82.083"
-                  gradientUnits="userSpaceOnUse"
-                >
-                  <stop offset="0" style="stop-color: #424242" />
-                  <stop offset="1" style="stop-color: #212121" />
-                </linearGradient>
-                <g id="eye-shape">
-                  <path
-                    style="fill: #fafafa"
-                    d="M34.16 106.51C18.73 106.51 6.19 87.44 6.19 64s12.55-42.51 27.97-42.51S62.13 40.56 62.13 64s-12.55 42.51-27.97 42.51"
-                  />
-                  <path
-                    style="fill: #b0bec5"
-                    d="M34.16 23.49c6.63 0 12.98 4 17.87 11.27 5.22 7.75 8.1 18.14 8.1 29.24s-2.88 21.49-8.1 29.24c-4.89 7.27-11.24 11.27-17.87 11.27s-12.98-4-17.87-11.27C11.06 85.49 8.19 75.1 8.19 64s2.88-21.49 8.1-29.24c4.89-7.27 11.23-11.27 17.87-11.27m0-4C17.61 19.49 4.19 39.42 4.19 64s13.42 44.51 29.97 44.51S64.13 88.58 64.13 64 50.71 19.49 34.16 19.49"
-                  />
-                </g>
-                <path
-                  id="pupil-shape"
-                  style="fill: url(#a)"
-                  d="M25.63 59.84c-2.7-2.54-2.1-7.58 1.36-11.26.18-.19.36-.37.55-.54-1.54-.87-3.23-1.36-5.01-1.36-7.19 0-13.02 7.93-13.02 17.7s5.83 17.7 13.02 17.7 13.02-7.93 13.02-17.7c0-1.75-.19-3.45-.54-5.05-3.24 2.33-7.11 2.64-9.38.51"
-                />
-              </defs>
-              <use href="#eye-shape" id="eye-left" />
-              <use href="#pupil-shape" id="pupil-left" />
-              <g transform="translate(59.68 0)">
-                <use href="#eye-shape" id="eye-right" />
-                <use href="#pupil-shape" id="pupil-right" />
-              </g>
-            </svg> -->
-
-            <!-- Text Content -->
-            <div class="max-w-xl mx-auto mt-8">
-              <h1
-                class="text-primary text-center mazius text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl leading-[1.2] mb-4 md:mb-6 lg:mb-8"
-              >
-                Skills & Stack
-              </h1>
-
-              <p
-                class="text-white gilroy font-bold text-base sm:text-lg md:text-xl lg:text-2xl leading-[1.3] mb-4 md:mb-6"
-              >
-                From pixels to databases I craft web applications with
-                <span class="mazius text-primary">React</span> on the front,
-                <span class="text-primary mazius">Laravel</span> on the back,
-                and <span class="text-primary mazius">MySQL</span> holding it
-                all together
-              </p>
-
-              <p
-                class="text-white gilroy font-bold text-base sm:text-lg md:text-xl lg:text-2xl leading-[1.3]"
-              >
-                I turn Figma designs into responsive interfaces, connect them to
-                real data using <span class="text-primary mazius">APIs</span>,
-                and make sure everything works smoothly from UI to backend logic
-              </p>
-            </div>
-          </div>
+       
 
           <!-- RIGHT SECTION - Physics Simulation -->
-          <div class="bg-white h-full relative">
-            <!-- Loading Overlay -->
-            <div
-              id="matter-loading"
-              class="absolute inset-0 bg-white flex flex-col items-center justify-center z-10"
-            >
-              <div class="mb-4">
-                <div
-                  class="w-12 h-12 border-4 border-primary border-t-transparent rounded-full animate-spin"
-                ></div>
-              </div>
-              <p class="text-lg font-semibold text-gray-700">
-                Loading Physics Engine
-              </p>
-              <p class="text-sm text-gray-500 mt-2">
-                Initializing Matter.js simulation
-              </p>
-            </div>
-
-            <!-- Simulation Canvas -->
-            <div id="simulation-wrapper" class="w-full h-full">
-              <canvas id="physics-canvas"></canvas>
-            </div>
-          </div>
+         <div id="simulation-wrapper">
+  <div class="content-overlay">
+    <div class="header-container">
+      <h1 class="hero-title gilroy font-bold">Skills &</h1>
+      <h1 class="hero-title gilroy font-bold">Tech Stack</h1>
+    </div>
+    <p class="hero-para">Interact with my tech stack below</p>
+  </div>
+  <canvas id="physics-canvas"></canvas>
+</div>
         </div>
       </div>
     </main>
