Fixed skills section

--- a/testimonial.html
+++ b/testimonial.html
@@ -738,7 +738,7 @@
       </div>
     </main>
 
-  
+  <script src="/js/main.js"></script>
     <script>
       // Add extra shine on click
       const cards = document.querySelectorAll(".ultra-shiny-glass");
