--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-     <!-- GSAP -->
+    <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Allura&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
     <style>
       /* :root {
@@ -75,13 +75,10 @@
       .text-primary {
         color: var(--color-primary) !important;
       }
-
-      
     </style>
   </head>
 
   <body class="" data-barba="wrapper">
-
     <!-- Navigation -->
     <!-- <div
       class="fixed top-[2%] lg:w-[40%] bg-[#111111] border-2 border-white text-white rounded-lg lg:rounded-xl left-1/2 -translate-x-1/2 z-50"
@@ -98,33 +95,40 @@
       </div>
     </div> -->
     <!-- Main Content -->
-    <main >
+    <main>
       <div
         data-barba="container"
         data-barba-namespace="skills"
         class="page-content"
       >
+        <!-- nav start  -->
+        <!-- navbar+  -->
 
-      <!-- nav start  -->
-         <!-- navbar+  -->
-   
         <!-- nav end  -->
         <!-- Equal grid layout -->
         <div class="grid grid-cols-1 lg:grid-cols-1 h-screen">
           <!-- LEFT SECTION - Text Content -->
-       
 
           <!-- RIGHT SECTION - Physics Simulation -->
-         <div id="simulation-wrapper">
-  <div class="content-overlay">
-    <div class="header-container">
-      <h1 class="hero-title gilroy font-bold">Skills &</h1>
-      <h1 class="hero-title gilroy font-bold">Tech Stack</h1>
-    </div>
-    <p class="hero-para">Interact with my tech stack below</p>
-  </div>
-  <canvas id="physics-canvas"></canvas>
-</div>
+          <div id="simulation-wrapper">
+            <div class="content-overlay">
+              <div class="header-container">
+                <h1 class="hero-title">
+                  Skills &
+                </h1>
+              </div>
+              <div class="header-container">
+                <h1 class="hero-title">
+                  Tech Stack
+                </h1>
+              </div>
+              <div class="para-container">
+                <p class="hero-para-skill gilroy">Hungry to learn. Ready to compete.</p>
+              </div>
+            </div>
+
+            <canvas id="physics-canvas"></canvas>
+          </div>
         </div>
       </div>
     </main>
