--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         rel="stylesheet" />
     <!-- Anton Font for Horizontal Scroll Section -->
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
-
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/menu.css">
+    <link id="cssLink" rel="stylesheet" href="css/style.css" />
 </head>
 
 <body class="bg-gray-50">
