--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,8 @@
       href="https://fonts.googleapis.com/css2?family=Allura&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/menu.css">
+    <link id="cssLink" rel="stylesheet" href="css/style.css" />
 
     <style>
       /* :root {
@@ -78,7 +79,7 @@
     </style>
   </head>
 
-  <body class="" data-barba="wrapper">
+  <body class="" >
     <!-- Navigation -->
     <!-- <div
       class="fixed top-[2%] lg:w-[40%] bg-[#111111] border-2 border-white text-white rounded-lg lg:rounded-xl left-1/2 -translate-x-1/2 z-50"
@@ -95,7 +96,7 @@
       </div>
     </div> -->
     <!-- Main Content -->
-    <main>
+    <main data-barba="wrapper" >
       <div
         data-barba="container"
         data-barba-namespace="skills"
