--- a/projects.html
+++ b/projects.html
@@ -133,10 +133,11 @@
                     <br />
 
                     <div class="text-end mt-3">
-                      <button
+                      <button                      
                         class="view-details-btn group relative px-5 py-2.5 bg-white/5 backdrop-blur-sm border border-white/20 rounded-full overflow-hidden transition-all duration-300 hover:bg-white hover:scale-105 active:scale-95 shadow-lg"
                       >
-                        <div
+                        <a href="headphonesite.html">
+                          <div
                           class="absolute inset-0 translate-x-[-100%] group-hover:translate-x-[100%] transition-transform duration-500 bg-gradient-to-r from-transparent via-white/30 to-transparent"
                         ></div>
 
@@ -159,6 +160,8 @@
                             />
                           </svg>
                         </span>
+                        </a>
+
                       </button>
                     </div>
                   </div>
