--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
                     </section>
 
                     <!-- 2 -->
-                    <section class="horizontal-section horizontal-hero-img">
+                    <!-- <section class="horizontal-section horizontal-hero-img">
                         <img src="https://images.unsplash.com/photo-1504890001746-a9a68eda46e2?q=80&w=1687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                             alt="DJI Spark drone" />
-                    </section>
+                    </section> -->
 
                     <!-- 3 -->
                     <section class="horizontal-section horizontal-header">
